# moneychoice_mcp

./: .env.example  .gitignore  LICENSE  README.md  README_FULL.md  TERMS.md  glama.json  macro-forecast-mcp.service  macro_forecast_mcp.py  pyproject.toml  requirements.txt
core/: cache.py  client.py  config.py  formatters.py  server.py
resources/: overview.py
tools/: commodities.py  currency.py  equities.py  gdp.py  inflation.py  labor.py  manufacturing.py  rates.py  real_estate.py  retail.py
